--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		
 		<div class="form-group">
 		  <label >Nome de Usuário:</label>
-		 <input type="text" id="user_name" class="form-control" placeholder="User Name">
+		 <input type="text" id="user_name" class="form-control" placeholder="Nome de Usuário">
 		</div>
 
 		<button id="login_button" class="btn btn-primary" onclick="addUser()">Log in</button>
