--- a/kwitter_page.html
+++ b/kwitter_page.html
@@ -33,7 +33,7 @@
 <center>
 	<div class="input_div_message_page">
 		<label>Enviar:</label>
-		<input type="text" id="msg" class="form-control" placeholder="Message">
+		<input type="text" id="msg" class="form-control" placeholder="Mensagem">
 		<button onclick="send()" class="btn btn-success">Enviar</button>
 	</div>
 </center>
